# Agentic-Conversational-BI

./: .dockerignore  .gitignore  README.md  docker-compose.yml  local_dbt_mcp.py  pyproject.toml
apps/api/: Dockerfile
apps/api/app/: main.py  schemas.py  settings.py
apps/api/app/agent/: graph.py  prompts.py  tools.py
apps/api/app/auth/: deps.py  jwt.py
apps/api/app/llm/: model.py
apps/api/app/routers/: chat.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/web/src/components/: ChatPanel.tsx  LandingPage.tsx  LoginPage.tsx  Message.tsx  MessageInput.tsx  ResetPasswordPage.tsx
apps/web/src/components/landing/: BiFeatureVisuals.tsx  HeroDashboard.tsx  LandingBackground.tsx  ValueProposition.tsx
apps/web/src/context/: AuthContext.tsx
