[project]
name = "dbtmcp-local"
version = "0.1.0"
description = ""
authors = [
    {name = "Viswanath"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mcp (>=1.27.0,<2.0.0)",
    "dbt-metricflow (>=0.12.0,<0.13.0)",
    "dbt-duckdb (>=1.10.1,<2.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<1.0.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "langgraph (>=0.6.0,<2.0.0)",
    "langchain (>=1.0.0,<2.0.0)",
    "langchain-core (>=1.0.0,<2.0.0)",
    "langchain-anthropic (>=0.3.0,<1.0.0)",
    "langchain-mcp-adapters (>=0.2.0,<1.0.0)",
    "pyjwt[crypto] (>=2.10.0,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
